<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/recipeImgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/recipeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipeImgView"
        android:text="@string/recipeTitle"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/recipeTitleET"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipeImgView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_toEndOf="@id/recipeTitleTV"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/recipePrepareTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeCookingTime"
        android:layout_below="@+id/recipeTitleTV"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/recipePrepareTimeET"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeTitleET"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/recipePrepareTimeTV"
        android:hint="Enter time in minutes"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/recipeServingsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeServings"
        android:layout_below="@+id/recipePrepareTimeTV"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/recipeServingsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipePrepareTimeET"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/recipeServingsTV"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/recipeCategoryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredientCategory"
        android:layout_below="@+id/recipeServingsTV"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/recipeCategoryET"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeServingsET"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/recipeCategoryTV"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/recipeCommentsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeComments"
        android:layout_below="@+id/recipeCategoryTV"
        android:layout_centerHorizontal="true"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/recipeCommentsET"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_below="@id/recipeCommentsTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:hint="Enter Additional Comments here!"
        android:inputType="textPersonName"
        android:minHeight="48dp" />


</RelativeLayout>