<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientDescription"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/itemDescriptionET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@id/itemDescriptionTV"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientCount"
            android:layout_below="@+id/itemDescriptionTV"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/itemCountET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemDescriptionET"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="78dp"
            android:layout_toEndOf="@id/itemCountTV"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemUnitTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientUnit"
            android:layout_below="@+id/itemCountTV"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/itemUnitET"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemCountET"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/itemUnitTV"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:hint="Unit of Measure"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemCategoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientCategory"
            android:layout_below="@+id/itemUnitTV"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/itemCategoryET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemUnitET"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_toEndOf="@id/itemCategoryTV"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />


    </RelativeLayout>
</ScrollView>